src/test/deca/syntax/invalid/invalid_class_syntax_but_parse_ok.deca
// Description :
//    Classe syntaxiquement correcte mais sémantiquement invalide.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
    int x;

    int f() {
        return;
    }
}

{
}

